# axum-rust-template

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: check.yaml
conf/: config.toml  keymatch_policy.csv
migrations/: 20221213143158_init.down.sql  20221213143158_init.up.sql
src/: main.rs  state.rs
src/apis/: user.rs
src/error/: api_err.rs  app_err.rs  auth_err.rs  mod.rs
src/extractor/: mod.rs
src/init/: config.rs  mod.rs  tracing.rs
src/middleware/: authorization.rs  log.rs  mod.rs
src/model/: config.rs  mod.rs
src/model/database/: common.rs  mod.rs  user.rs
src/model/request/: user.rs
src/model/response/: common.rs  mod.rs  user.rs
src/route/: mod.rs  user.rs
src/service/: casbin_service.rs  mod.rs  token_service.rs  user.rs
