[package]
name = "axum-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
tokio = { version = "1.23.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
] }
anyhow = "1.0.68"
serde = "1.0.151"
redis = { version = "0.22.1", features = ["aio", "tokio-comp"] }
chrono = "0.4.23"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
validator = { version = "0.16.0", features = ["derive"] }
serde_json = "1.0.93"
axum-macros = "0.3.4"
http = "0.2.8"
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
thiserror = "1.0.38"
toml = "0.7.2"
casbin = { version = "2.0.9", features = ["tokio"] }
opentelemetry = { version = "0.18.0", features = ["metrics", "rt-tokio"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = "0.3.16"
